    Party's "MaxSize" renamed -> "Party-Max-Size"
    Party's "AutoKick_Interval" renamed -> "Hours-Between-Cleanup-Operations"
    Party's "Old_Party_Member_Cutoff" renamed -> "Offline-Day-Limit"
    Added toggle to limit max party size, previously this was done by setting party maximum size above -1
    Leveling your Party-Level now requires being near another party member by default
    Party members are now informed about your skill ups by default

    Notification config options will now be found in "chat_and_hud_notifications.conf"

    MOTD (Message of the day) config options will now be found in "motd.conf"
    MOTD's "MOTD_Enabled" renamed -> "Show-MOTD-On-Player-Join"

    Anonymous statistic config options will now be found in "analytics_reporting.conf"

    Hardcore config options will now be found in "hardcore.conf"

    Exploit related config options will now be found in "exploit-prevention"
    Exploit Prevention's "EndermanEndermiteFarms" renamed -> "Endermen-Endermite-Fix"
    Added toggle for pistons marking natural blocks as unnatural after being moved to prevent afk stone farms
    Added toggle for marking spawned mobs for giving modified XP
    Added toggle for tamed mobs to give combat XP when struck
    Added toggle for acrobatics exploit prevention
    Added customizable limit for the number of locations acrobatics tracks for exploit prevention
    Added toggle for fishing exploit prevention

    Settings related to Player Leveling are now found in "player_leveling.conf"
    Player Leveling's "TruncateSkills" renamed -> "Reduce-Player-Skills-Above-Cap"
    Player Leveling's "StartingLevel" renamed -> "Player-Starting-Level"
    Retro mode setting's "Enable" renamed -> "Use-Retro-Mode"
    Added new toggles for enabling level caps (previously this was done by setting the value above 0)

    World Blacklist settings can now be found in "world_blacklist.conf"
    World Blacklist now includes examples
